--- a/css/styles.css
+++ b/css/styles.css
@@ -118,8 +118,10 @@ i.fa.fa-location-arrow,
 i.fa.fa-phone,
 i.fa.fa-calendar,
 i.fa.fa-pencil,
-i.fa.fa-power-off {
-    padding-right: 10px;
+i.fa.fa-power-off,
+i.fa.fa-comment,
+i.fa.fa-hand-o-right {
+    padding-right: 8px;
 }
 
 .nav-parent > li.active > a,
@@ -543,7 +545,6 @@ nav > div > div > ul > li > a > i,
 .appmnt-pnl-btn button {
     margin: 0;
     padding: 0;
-    width: 30%;
     background: transparent;
     text-transform: lowercase;
     font-size: 16px;
@@ -555,7 +556,6 @@ nav > div > div > ul > li > a > i,
     font-size: 14px;
     text-transform: lowercase;
     text-decoration: none;
-    width: 30%;
     float: right;
     z-index: 1;
 }
@@ -574,6 +574,10 @@ nav > div > div > ul > li > a > i,
     -moz-transition-duration: 0.5s;
     -o-transition-duration: 0.5s;
     transition-duration: 0.5s;
+}
+
+a.btn.btn-block.appo.tooltip-bottom {
+  width: 30%;
 }
 
 .appmnt-pnl-btn i {
