--- a/css/styles.css
+++ b/css/styles.css
@@ -108,6 +108,7 @@ h1, h2, h3, h4 {
 i.fa.fa-user-md,
 i.fa.fa-location-arrow,
 i.fa.fa-phone,
+i.fa.fa-briefcase,
 i.fa.fa-calendar,
 i.fa.fa-pencil,
 i.fa.fa-power-off,
@@ -212,6 +213,11 @@ nav > div > div > ul > li > a > i,
 
     .docors-list-info li span {
         padding-left: 0 !important;
+    }
+
+    .p-info,
+    .d-info {
+        padding-left: 70px !important;
     }
 }
 
@@ -378,7 +384,8 @@ nav > div > div > ul > li > a > i,
 
 .row-header-lc,
 .row-header-fff,
-.row-header2-fff {
+.row-header2-fff,
+.row-header-black {
     margin: 25px 0px;
     font-size: 18px;
     text-transform: uppercase;
@@ -399,6 +406,11 @@ nav > div > div > ul > li > a > i,
 .row-header-fff {
     color: #ECF0F1;
     font-size: 18px;
+}
+
+.row-header-black {
+    color: #34495E;
+
 }
 
 .row-header2-fff {
@@ -626,6 +638,11 @@ a.btn.btn-block.appo.tooltip-bottom {
     line-height: 1;
     font-size: 14px;
     text-transform: uppercase;
+}
+
+.online-circle {
+    font-size: 12px;
+    color: #27AE60;
 }
 
 .circle {
@@ -1213,8 +1230,13 @@ a.btn.btn-block.appo.tooltip-bottom {
     margin-bottom: 8px;
 }
 
+.p-info {
+    padding: 0; 
+}
+
 .d-info ul,
-.p-info ul {
+.p-info ul,
+.s-info ul {
     margin: 10px 0;
     list-style: none;
     text-transform: uppercase;
@@ -1226,12 +1248,14 @@ a.btn.btn-block.appo.tooltip-bottom {
 }
 
 .p-info ul i,
-.d-info ul i {
+.d-info ul i,
+.s-info ul i {
     padding-right: 10px;
 }
 
 .p-info ul li,
-.d-info ul li {
+.d-info ul li,
+.s-info ul li {
     margin: 0 10px;
     padding: 0 10px;
 }
@@ -1313,7 +1337,7 @@ a.btn.btn-block.appo.tooltip-bottom {
 }
 
 .clinic-box h2 {
-    margin: 0 0 15px 0;
+    margin: 0 0 6px 0;
     color: #1ABC9C;
     font-size: 16px;
     text-transform: uppercase;
@@ -1330,6 +1354,19 @@ a.btn.btn-block.appo.tooltip-bottom {
     line-height: 14px;
     text-transform: uppercase;
     font-size: 12px;
+}
+
+.clinic-days {
+    margin: 5px 0;
+    font-size: 14px !important;
+    font-weight: 600;
+}
+
+.clinic-times {
+    padding: 5px 0;
+    margin: 2px 0;
+    font-size: 20px !important;
+    font-weight: 600;
 }
 
 .hide {
