--- a/css/styles.css
+++ b/css/styles.css
@@ -101,6 +101,10 @@ h1, h2, h3, h4 {
     background: #ECF0F1 !important;
 }
 
+.secretary-bg {
+    background: rgba(231, 76, 60, 0.2) !important;
+}
+
 .fa-lg {
       font-size: 1.33333333em !important;
 }
@@ -451,6 +455,10 @@ nav > div > div > ul > li > a > i,
     border-radius: 2px;
 }
 
+.panel.panel-default.sched-panel:hover {
+    border: 2px solid #35404F;
+}
+
 .panel-heading {
     text-shadow: 1px 1px 1px #35404F;
 }
@@ -462,6 +470,10 @@ nav > div > div > ul > li > a > i,
     border: none;
     border-radius: 0;
     text-shadow: 1px 1px 1px #35404F;
+}
+
+.sched-panel .panel-heading {
+    background-color: #35404F !important;
 }
 
 .panel-heading .delete-btn {
@@ -635,7 +647,7 @@ a.btn.btn-block.appo.tooltip-bottom {
 
 .user-md p {
     margin-top: 10px;
-    line-height: 1;
+    line-height: 10px;
     font-size: 14px;
     text-transform: uppercase;
 }
@@ -680,6 +692,7 @@ a.btn.btn-block.appo.tooltip-bottom {
 
 .sched-panel,
 .dc-profile-sched-panel {
+    min-height: 165px;
     border: 2px solid transparent;
     background-color: rgba(236, 240, 241, 0.3) !important;
 }
