--- a/css/search.css
+++ b/css/search.css
@@ -1,5 +1,5 @@
 .divResult {
-    width: 100%;
+    min-width: 266px;
     -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
     box-shadow: 0 6px 12px rgba(0,0,0,.175);
 }
