--- a/css/styles.css
+++ b/css/styles.css
@@ -185,7 +185,7 @@ nav > div > div > ul > li > a > i,
 @media (min-width:768px){
 
     body {
-        padding-top: 80px;
+        padding-top: 60px;
     }
 
     i.fa.fa-dashboard {
@@ -250,6 +250,10 @@ nav > div > div > ul > li > a > i,
         margin-left: 70px;
     }
 
+    .other-services {
+        padding-left: 100px;
+        margin: 30px 0;
+    }
 }
 
 .dropdown-menu>li>a {
@@ -1088,6 +1092,7 @@ a.btn.btn-block.appo.tooltip-bottom {
 .login-link {
     display: block;
     margin-top: 15px;
+    margin-bottom: 0;
     font-size: 14px;
     color: #7F8C8D !important;
     text-align: center;
@@ -1137,6 +1142,33 @@ a.btn.btn-block.appo.tooltip-bottom {
     margin-top: 30px;
     box-shadow: 0 0 0 10px hsl(0, 0%, 70%), 0 0 0 15px hsl(0, 0%, 80%);
 }
+
+.other-services {
+    margin: 10px 0 60px 0 !important;
+}
+
+.other-services label {
+    text-transform: uppercase;
+    font-size: 15px;
+}
+
+.other-services label i {
+    margin-right: 10px;
+}
+
+ul.nav.items-list li {
+    margin-left: 20px;
+    padding: 5px;
+    font-size: 14px;
+    line-height: 1;
+    cursor: pointer;
+}
+
+ul.nav.items-list li:hover {
+    color: #16A085 !important;
+}
+
+
 
 .about-icons img {
     height: 128px;
